# orbvynx

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  install.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
apps/cli/: Cargo.toml
apps/cli/src/: cli.rs  main.rs  ui.rs
crates/capability/: Cargo.toml
crates/capability/src/: lib.rs
crates/events/: Cargo.toml
crates/events/src/: lib.rs
crates/executor/: Cargo.toml
crates/executor/src/: capability.rs  error.rs  executor.rs  lib.rs  result.rs  sandbox.rs
crates/executor/src/capabilities/: android.rs  android_project.rs  apk_inspect.rs  archive.rs  archive_ext.rs  dataformats.rs  filesystem.rs  fsops.rs  git.rs  globops.rs  gradle_project.rs  hash.rs  http.rs  jsonops.rs  mod.rs  system.rs  text.rs  versioning.rs
crates/intent/: Cargo.toml
crates/intent/src/: error.rs  events.rs  lib.rs  lifecycle.rs  model.rs  normalization.rs  validation.rs
crates/kernel/: Cargo.toml
crates/kernel/src/: boot.rs  clock.rs  error.rs  events.rs  identity.rs  lib.rs  lifecycle.rs  registry.rs  session.rs
crates/memory/: Cargo.toml
crates/memory/src/: lib.rs
crates/planner/: Cargo.toml
crates/planner/src/: context.rs  error.rs  events.rs  lib.rs  pipeline.rs  plan.rs  policy.rs  scoring.rs
crates/plugin-runtime/: Cargo.toml
crates/plugin-runtime/src/: capability_adapter.rs  error.rs  lib.rs  manifest.rs  plugin.rs  registry.rs
crates/security/: Cargo.toml
crates/security/src/: dispatcher.rs  error.rs  lib.rs  permissions.rs  policy.rs
crates/workflow/: Cargo.toml
crates/workflow/src/: error.rs  graph.rs  lib.rs  task.rs  workflow.rs
examples/plugins/: echo_plugin.sh
sdk/: Cargo.toml
sdk/src/: lib.rs
