[workspace]
resolver = "2"
members = [
    "crates/kernel",
    "crates/events",
    "crates/intent",
    "crates/planner",
    "crates/workflow",
    "crates/executor",
    "crates/capability",
    "crates/plugin-runtime",
    "crates/memory",
    "crates/security",
    "apps/cli",
    "sdk",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Waheed"]
license = "MIT"
repository = "https://github.com/YOUR_GITHUB_USERNAME/orbvynx"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
