[package]
name = "orbvynx-sdk"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Public SDK for writing third-party ORBVYNX capabilities"

[dependencies]
orbvynx-executor = { path = "../crates/executor" }
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
tokio.workspace = true

[dev-dependencies]
tokio-test = "0.4"
