[package]
name = "orbvynx-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "orbvynx"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
uuid.workspace = true
serde_json.workspace = true

orbvynx-kernel = { path = "../../crates/kernel" }
orbvynx-intent = { path = "../../crates/intent" }
orbvynx-planner = { path = "../../crates/planner" }
orbvynx-workflow = { path = "../../crates/workflow" }
orbvynx-executor = { path = "../../crates/executor" }
orbvynx-plugin-runtime = { path = "../../crates/plugin-runtime" }
