[package]
name = "orbvynx-executor"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
orbvynx-kernel = { path = "../kernel" }
orbvynx-workflow = { path = "../workflow" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
sha2 = "0.10"
zip = "2"
hex = "0.4"

[dev-dependencies]
tokio-test = "0.4"
