[package]
name = "orbvynx-executor"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
orbvynx-kernel = { path = "../kernel" }
orbvynx-workflow = { path = "../workflow" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
sha2 = "0.10"
zip = "2"
hex = "0.4"
base64 = "0.22"
regex = "1"
walkdir = "2"
humantime = "2"
urlencoding = "2"
csv = "1"
toml = "0.8"
serde_yaml = "0.9"
glob = "0.3"
semver = "1"
tar = "0.4"
flate2 = "1"
mime_guess = "2"
quick-xml = "0.36"

[dev-dependencies]
tokio-test = "0.4"
