[package]
name = "orbvynx-kernel"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "ORBVYNX microkernel: boot, event bus, scheduler, lifecycle, registry"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
dashmap = "6"
once_cell = "1"

[dev-dependencies]
tokio-test = "0.4"
