[package]
name = "orbvynx-planner"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "ORBVYNX Planner Engine: context analysis, capability discovery, plan generation"

[dependencies]
orbvynx-kernel = { path = "../kernel" }
orbvynx-intent = { path = "../intent" }

tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true

[dev-dependencies]
tokio-test = "0.4"
