[package]
name = "orbvynx-plugin-runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "ORBVYNX Plugin Runtime: subprocess-based dynamic capability loading"

[dependencies]
orbvynx-executor = { path = "../executor" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
async-trait.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio-test = "0.4"
