[package]
name = "orbvynx-security"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
orbvynx-kernel = { path = "../kernel" }
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
thiserror.workspace = true
tracing.workspace = true
dashmap = "6"

[dev-dependencies]
tokio-test = "0.4"
